Scrollbar resolved

--- a/stylesheets/partials/components/_youtubePlaylistGallery.scss
+++ b/stylesheets/partials/components/_youtubePlaylistGallery.scss
@@ -45,8 +45,6 @@ $youTubePlayListItemWidth: 30%;
                 margin: 0 !important;
                 padding: 0;
                 overflow: hidden;
-                /*white-space: nowrap;
-                text-overflow: ellipsis;*/
                 height: 2.6em;
             }
 
@@ -71,25 +69,11 @@ $youTubePlayListItemWidth: 30%;
 @media (max-width: 992px) {
     .youtube-playlist-item {
         width: 47%;
-/*
-        figure {
-            .fa-play-circle-o {
-                left: 46%;
-                top: 35%;
-           }
-        }*/
     }
 }
 
 @media (max-width: 767px) {
     .youtube-playlist-item {
         width: 96%;
-
-      /*  figure {
-            .fa-play-circle-o {
-                left: 48%;
-                top: 43%;
-            }
-        }*/
    }
 }
